tests/ui/consts/const-eval/array-len-mismatch-type.stderr
error[E0308]: mismatched types
  --> $DIR/array-len-mismatch-type.rs:2:34
   |
LL | pub struct Data([[&'static str]; 5_i32]);
   |                                  ^^^^^ expected `usize`, found `i32`
   |
   = note: array length can only be `usize`
help: change the type of the numeric literal from `i32` to `usize`
   |
LL - pub struct Data([[&'static str]; 5_i32]);
LL + pub struct Data([[&'static str]; 5_usize]);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
